Updated controller and others

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ springdoc.swagger-ui.path=/documentation
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:redshift://{DATASOURCE_URI}
+spring.datasource.url=jdbc:redshift://{HOST_URI}
 spring.datasource.username={USERNAME}
 spring.datasource.password={PASSWORD}
 
 spring.datasource.validationQuery = SELECT 1
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
-#spring.jpa.properties.hibernate.dialect=RedShiftDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.properties.hibernate.current_session_context_class =org.springframework.orm.hibernate5.SpringSessionContext
